@@ -3,6 +3,7 @@ Version 3.xxxx (November xth 2016)
 - Fixed: JSon float/nan value, solved by upgrading JSonCPP
 - Fixed: OZW, when a value is updated and the sensor did not exists before (for example a kWh sensor), it is created (saves a restart)
 - Implemented: Blockly/Lua Set SetPoint option
+- Implemented: Netatmo Home Coach support
 - Implemented: Notification for Dummy Soil/Moisture sensor
 - Implemented: Option to replace an Meter device
 
